# actix-webserver

./: Cargo.toml
migrations/2023-05-26-132832_create_products/: down.sql  up.sql
src/: db_connection.rs  errors.rs  lib.rs  main.rs  schema.rs
src/handlers/: authentication.rs  mod.rs  products.rs  register.rs
src/models/: product.rs  user.rs
src/utils/: jwt.rs
tests/: product_test.rs
