[package]
name = "mystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.13.0"
actix-web="4.3.1"
diesel={version="2.1.0", features=["postgres"]}
dotenv="0.15.0"
serde="1.0.9"
serde_derive="1.0.9"
serde_json="1.0.9"