[package]
name = "mystore"
version = "0.1.0"
edition = "2021"

[lib]
name="mystore_lib"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.3.1"
actix="0.13.0"
actix-web="4.3.1"
diesel={version="2.1.0", features=["postgres", "r2d2", "chrono"]}
dotenv="0.15.0"
serde="1.0.9"
futures = "0.3.28"
serde_derive="1.0.9"
serde_json="1.0.9"
dotenv_codegen = "0.15.0"
jsonwebtoken="8.3.0"
bcrypt="0.14.0"
csrf="0.4.1"
data-encoding = "2.4.0"
chrono= {version="0.4.21", features=["serde"]}
log="0.4.6"
actix-cors = "0.6.0"
env_logger = "0.10.0"
actix-identity = "0.4.0"
hex = "0.4.3"

[dev-dependencies]
actix-http-test = "3.1.0"
bytes="0.6.0"